--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ dependencies:
   flutter_timezone: ^5.0.1
   flutter_local_notifications_platform_interface: ^10.0.0
   flutter_local_notifications_windows: ^2.0.1
+  flutter_login: ^6.0.0
+  mockito: ^5.4.4
 
 
 dev_dependencies:
@@ -91,8 +93,8 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.4
 
 flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
+  android: true
+  ios: false
   image_path: "assets/app_icon/Gemini_Generated_Image_sz8u71sz8u71sz8u.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
